Fixed JS bugs, changed colours, fixed layout issues etc.

--- a/css/index.css
+++ b/css/index.css
@@ -64,6 +64,13 @@ body {
   transition: .5s ease;
   background: #0000001a;
   height: 3.5rem;
+  text-shadow: 0 1px 1px rgba(0,0,0,0.5);
+}
+
+#nav div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 nav ul {
@@ -194,11 +201,10 @@ nav li {
 /* ABOUT PAGE */
 
 #aboutSection {
-  background: #f03838; /* f03838 / db4d4d */
+  background: #ea3e3e; /* f03838 / db4d4d */
   height: 24rem;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
   padding: 0 0 2.5rem 0;
   box-shadow: 0 1px 3px rgba(0,0,0,0.1);
 }
@@ -237,6 +243,15 @@ nav li {
 
 #btnGoToSkills, #nextSkill, #btnGoToProjects {
   display: none;
+  text-shadow: 0 1px 1px rgba(0,0,0,0.5);
+  margin: 0 auto;
+}
+
+#btnGoToSkills, #btnGoToProjects {
+  box-shadow: 0 1px 1px rgba(0,0,0,0.5);
+  border-radius: .25rem;
+  justify-content: center;
+  align-items: center;
 }
 
 #btnGoToSkills {
@@ -252,7 +267,7 @@ nav li {
 /* SKILLS PAGE */
 
 #skillsSection {
-  background: #d33131; /* d33131 /  cb3a3a */
+  background: #cd3737; /* d33131 /  cb3a3a */
   height: 37rem;
 }
 
@@ -498,7 +513,7 @@ nav li {
   }
 
   #nav {
-    font-size: 1rem;
+    font-size: 1.15rem;
   }
 
   nav ul {
@@ -556,8 +571,7 @@ nav li {
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding: 4.5rem 0 0;
-    justify-content: flex-start;
+    padding: 4rem 0 1.4rem 0;
   }
 
   #aboutMeContent {
@@ -596,11 +610,6 @@ nav li {
     margin: 0 auto;
     width: 17rem;
     height: 4rem;
-    justify-content: center;
-    align-items: center;
-    border-radius: .25rem;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.5);
-    text-shadow: 0 1px 1px rgba(0,0,0,0.5);
     font-size: 1.7rem;
   }
 
@@ -644,15 +653,15 @@ nav li {
 @media (max-width: 320px) {
 
   .container {
-    max-width: 319x;
+    max-width: 320px;
   }
 
   #nav {
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
 
   nav ul {
-    width: 15rem;
+    width: 100%;
   }
 
   #name {
@@ -702,7 +711,6 @@ nav li {
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 4rem 0 0 0;
   }
 
   #portrait {
